--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
     "knockout-mapping": "^2.6.0"
   },
   "devDependencies": {
-    
+    "html-loader": "^0.4.4",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
     "style-loader": "^0.13.1",
-    "text-loader": "^0.0.1",
-    "tsd":"^0.6.5",
+    "tsd": "^0.6.5",
     "typescript": "^2.0.3",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.2",
