--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jquery": "^3.1.1",
     "knockout": "^3.4.0",
-    "knockout-mapping": "^2.6.0"
+    "knockout-mapping": "^2.6.0",
+    "lodash": "^4.16.4"
   },
   "devDependencies": {
-    "html-loader": "^0.4.4",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
+    "html-loader": "^0.4.4",
     "style-loader": "^0.13.1",
     "tsd": "^0.6.5",
     "typescript": "^2.0.3",
